--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "npx sanity@latest schema extract --path=./sanity/extract.json && npx sanity@latest typegen generate"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
@@ -23,9 +27,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.90.0",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
